--- a/public/game.html
+++ b/public/game.html
@@ -26,7 +26,7 @@
         integrity="sha384-8Vi8VHwn3vjQ9eUHUxex3JSN/NFqUg3QbPyX8kWyb93+8AC/pPWTzj+nHtbC5bxD"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.2/chess.js"></script>
-    <script type="module" src="../webpack/index_bundle.js"></script>
+    <script type="module" src="../webpack/index.js"></script>
 </body>
 
 </html>
